--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -59,6 +59,8 @@
 }
 
 body {
+  display:flex;
+  place-items:center;
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
