--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,7 +3,7 @@
 #app {
   border:1px solid rgba(36, 35, 35, 0.801);
   max-width: 1280px;
-  height:95vh;
+  height:900px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
